1999-03-06  Rosanna Yuen  <rwsy@mit.edu>

	* scorpion.scm (button-released): finished scorpion.scm (minus hints)
	* odessa.scm (begin-score): fixed scoring of dealt cards.

1999-03-06  Rosanna Yuen  <rwsy@mit.edu>

	* template.scm: added a template to facilitate faster creation of
	games.
	* scorpion.scm: added new (incomplete) game.

1999-03-04  Rosanna Yuen  <rwsy@mit.edu>

	* royal_east.scm: added new game.

1999-03-03  Rosanna Yuen  <rwsy@mit.edu>

	* westhaven.scm: added new game.

1999-03-02  Rosanna Yuen  <rwsy@mit.edu>

	* union_square.scm: added new game

1999-02-24  Rosanna Yuen  <rwsy@mit.edu>

	* added info to status bar for most games
	* spider.scm: added checks for game over and game won, and added
	hint support.
	
1999-02-23  Rosanna Yuen  <rwsy@mit.edu>

	* bristol.scm: added new game

1999-02-22  Rosanna Yuen  <rwsy@mit.edu>

	* spider.scm: added scoring; fixed minor bugs
	* hopscotch.scm: added new game
	* beleaguered_castle.scm: moved deck making to sol.scm
	* sol.scm (make-deck-list-ace-low): moved this from
	beleaguered_castle.scm
	* auld_lang_syne.scm: added new game
	* eagle_wing.scm (button-double-clicked): fixed minor bug with
	last Reserve card.
	* klondike.scm (button-double-clicked): allows double clicking to
	acutally work for those who prefer it.
	(new-game): made the waste pile only 1 wide if only dealing 1 card
	at a time.  (unfortunately, this only happens when game is
	restarted.  perhaps force new game when options change?)
	
1999-02-22  Rosanna Yuen  <rwsy@mit.edu>

	* fourteen.scm: added new game
	* clock.scm (button-clicked): made clicking kings easier
	(complete-transaction): added scoring support

1999-02-21  Rosanna Yuen  <rwsy@mit.edu>

	* splash.c, sol.c, menu.c: s/Aisleriot/AisleRiot

1999-02-21  Rosanna Yuen  <rwsy@mit.edu>

	* freecell.scm: added score support
	* menu.c (help_about_callback): proofread the about box text

1999-02-20  Rosanna Yuen  <rwsy@mit.edu>
