@@ -1,3 +1,7 @@
+1999-03-09  Rosanna Yuen  <rwsy@mit.edu>
+
+	* clock.scm (button-double-clicked): fixed double clicking bug
+
 1999-03-06  Rosanna Yuen  <rwsy@mit.edu>
 
 	* scorpion.scm (button-released): finished scorpion.scm (minus hints)
